--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container-fluid {
-  padding: 3% 1%;
+  padding: 3% 15%;
 }
 
 h1 {
@@ -16,6 +16,13 @@ h1 {
   font-size: 3.5rem;
   line-height: 1.5;
   font-weight: 900;
+}
+
+h2 {
+  font-family: "Montserrat";
+  font-size: 3rem;
+  line-height: 1.5;
+  font-weight: bold;
 }
 
 h3 {
@@ -66,7 +73,7 @@ p {
 /* Features Section */
 
 #features {
-  padding: 7% 1%;
+  padding: 7% 15%;
 }
 
 .feature-box {
@@ -81,4 +88,33 @@ p {
 
 .icon:hover {
   color: #ff4c68;
+}
+
+/* Testimonial Section */
+
+#testimonials {
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+.carousel-item {
+  padding: 7% 15%;
+}
+
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
 }
