--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,9 @@
 body {
   font-family: "Montserrat";
+  text-align: center;
 }
 
-#title {
-  background-color: #ff4c68;
-  color: #fff;
-}
-
-.container-fluid {
-  padding: 3% 15% 7%;
-}
-
-h1 {
-  font-family: "Montserrat";
-  font-size: 3.5rem;
-  line-height: 1.5;
-  font-weight: 900;
-}
-
-h2 {
-  font-family: "Montserrat";
-  font-size: 3rem;
-  line-height: 1.5;
-  font-weight: bold;
-}
-
-h3 {
-  font-size: 1.5rem;
+h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat";
   font-weight: bold;
 }
@@ -34,6 +11,43 @@ h3 {
 p {
   color: #8f8f8f;
 }
+
+/* Headings */
+
+.big-heading {
+  font-family: "Montserrat";
+  font-size: 3.5rem;
+  line-height: 1.5;
+  font-weight: 900;
+
+}
+
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+/* Containers */
+
+.container-fluid {
+  padding: 7% 15%;
+}
+
+/* Sections */
+
+.colored-section {
+  background-color: #ff4c68;
+  color: #fff;
+
+}
+
+.white-section {
+  background-color: #fff;
+
+}
+
+
+
 
 /* Navigation Bar */
 
@@ -63,6 +77,14 @@ p {
   margin: 5% 3% 5% 0;
 }
 
+/* Title Section */
+
+
+#title .container-fluid {
+  padding: 3% 15% 7%;
+  text-align: left;
+}
+
 /* Title Image */
 
 .title-image {
@@ -75,15 +97,14 @@ p {
 /* Features Section */
 
 #features {
-  padding: 7% 15%;
-  background-color: #fff;
   position: relative;
+}
 
-
+.feature-title {
+  font-size: 1.5rem;
 }
 
 .feature-box {
-  text-align: center;
   padding: 5%;
 }
 
@@ -99,9 +120,13 @@ p {
 /* Testimonial Section */
 
 #testimonials {
-  text-align: center;
   background-color: #ef8172;
-  color: #fff;
+  
+}
+
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .testimonial-image {
@@ -110,13 +135,8 @@ p {
   margin: 20px;
 }
 
-.carousel-item {
-  padding: 7% 15%;
-}
-
 #press {
   background-color: #ef8172;
-  text-align: center;
   padding-bottom: 3%;
 }
 
@@ -129,7 +149,11 @@ p {
 
 #pricing {
   padding: 100px;
-  text-align: center;
+}
+
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .pricing-column {
@@ -139,27 +163,17 @@ p {
 
 /* CTA Section */
 
-#cta {
-  background-color: #ff4c68;
-  text-align: center;
-  padding: 7% 15%;
 
-}
 
-.cta-heading {
-  font-family: "Montserrat";
-  font-weight: 900;
-  color: #fff;
-  font-size: 3.5rem;
-  line-height: 1.5;
-}
 
 /* Footer */
 
 #footer {
   background-color: #fff;
-  text-align: center;
-  padding: 7% 15%;
+}
+
+#footer .container-fluid {
+  padding: 3% 15% 2%;
 }
 
 .social-icon {
