--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,32 @@
 body {
   font-family: "Montserrat";
-  text-align: center;
 }
 
-h1, h2, h3, h4, h5, h6 {
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+}
+
+.container-fluid {
+  padding: 3% 15% 7%;
+}
+
+h1 {
+  font-family: "Montserrat";
+  font-size: 3.5rem;
+  line-height: 1.5;
+  font-weight: 900;
+}
+
+h2 {
+  font-family: "Montserrat";
+  font-size: 3rem;
+  line-height: 1.5;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 1.5rem;
   font-family: "Montserrat";
   font-weight: bold;
 }
@@ -11,43 +34,6 @@ h1, h2, h3, h4, h5, h6 {
 p {
   color: #8f8f8f;
 }
-
-/* Headings */
-
-.big-heading {
-  font-family: "Montserrat";
-  font-size: 3.5rem;
-  line-height: 1.5;
-  font-weight: 900;
-
-}
-
-.section-heading {
-  font-size: 3rem;
-  line-height: 1.5;
-}
-
-/* Containers */
-
-.container-fluid {
-  padding: 7% 15%;
-}
-
-/* Sections */
-
-.colored-section {
-  background-color: #ff4c68;
-  color: #fff;
-
-}
-
-.white-section {
-  background-color: #fff;
-
-}
-
-
-
 
 /* Navigation Bar */
 
@@ -77,13 +63,6 @@ p {
   margin: 5% 3% 5% 0;
 }
 
-/* Title Section */
-
-
-#title .container-fluid {
-  padding: 3% 15% 7%;
-}
-
 /* Title Image */
 
 .title-image {
@@ -96,14 +75,15 @@ p {
 /* Features Section */
 
 #features {
+  padding: 7% 15%;
+  background-color: #fff;
   position: relative;
-}
 
-.feature-title {
-  font-size: 1.5rem;
+
 }
 
 .feature-box {
+  text-align: center;
   padding: 5%;
 }
 
@@ -119,13 +99,9 @@ p {
 /* Testimonial Section */
 
 #testimonials {
+  text-align: center;
   background-color: #ef8172;
-  
-}
-
-.testimonial-text {
-  font-size: 3rem;
-  line-height: 1.5;
+  color: #fff;
 }
 
 .testimonial-image {
@@ -134,8 +110,13 @@ p {
   margin: 20px;
 }
 
+.carousel-item {
+  padding: 7% 15%;
+}
+
 #press {
   background-color: #ef8172;
+  text-align: center;
   padding-bottom: 3%;
 }
 
@@ -148,11 +129,7 @@ p {
 
 #pricing {
   padding: 100px;
-}
-
-.price-text {
-  font-size: 3rem;
-  line-height: 1.5;
+  text-align: center;
 }
 
 .pricing-column {
@@ -162,17 +139,27 @@ p {
 
 /* CTA Section */
 
+#cta {
+  background-color: #ff4c68;
+  text-align: center;
+  padding: 7% 15%;
 
+}
 
+.cta-heading {
+  font-family: "Montserrat";
+  font-weight: 900;
+  color: #fff;
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
 
 /* Footer */
 
 #footer {
   background-color: #fff;
-}
-
-#footer .container-fluid {
-  padding: 3% 15% 2%;
+  text-align: center;
+  padding: 7% 15%;
 }
 
 .social-icon {
